--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             align-items: center;
             height: 100vh;
             overflow: hidden;
+            transition: background 0.3s, color 0.3s;
+            position: relative;
         }
         .container {
             width: 80%;
@@ -24,6 +26,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            transition: background 0.3s, color 0.3s;
         }
         .slide {
             display: none;
@@ -33,6 +36,10 @@
         }
         .slide.active {
             display: block;
+        }
+        .heading-slide {
+            font-size: 32px;
+            color: #007BFF;
         }
         .buttons {
             margin-top: 20px;
@@ -53,20 +60,65 @@
             background: #ccc;
             cursor: not-allowed;
         }
+        /* Dark mode styles */
+        .dark-mode {
+            background: #121212;
+            color: #ffffff;
+        }
+        .dark-mode .container {
+            background: #1e1e1e;
+            color: #ffffff;
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+        }
+        .dark-mode .heading-slide {
+            color: #4ea8de;
+        }
+        .dark-mode button {
+            background: #4ea8de;
+        }
+        .dark-mode button:hover {
+            background: #007acc;
+        }
+        #view-counter {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 14px;
+            color: #888;
+        }
+        .dark-mode #view-counter {
+            color: #ccc;
+        }
+        #dark-mode-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 10px 15px;
+            background: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #dark-mode-toggle:hover {
+            background: #0056b3;
+        }
     </style>
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4c58411340ba4aa3ba0407daf0e00ffd"}'></script>
     <!-- End Cloudflare Web Analytics -->
 </head>
 <body>
+    <button id="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    <div id="view-counter">Views: Loading...</div>
     <div class="container">
-        <div class="slide active">Welcome: Understanding Healthy Relationships & Boundaries</div>
+        <div class="slide active heading-slide">Understanding Healthy Relationships & Boundaries</div>
         <div class="slide">A healthy relationship means both people feel free to make choices without pressure.</div>
         <div class="slide">Your feelings and comfort matter just as much as anyone else’s.</div>
         <div class="slide">It’s always okay to change your mind, at any time, for any reason.</div>
         <div class="slide">If you ever feel like you “have to” do something, take a step back and ask yourself why.</div>
         <div class="slide">🗣️ (Discuss) “There’s a difference between choosing something because you truly want to and feeling like you have to.”</div>
-        <div class="slide">Recognizing Pressure & Coercion</div>
+        <div class="slide heading-slide">Recognizing Pressure & Coercion</div>
         <div class="slide">Watch out for guilt-tripping: “If you cared about me, you would.”</div>
         <div class="slide">Wearing you down: Asking over and over until you say yes.</div>
         <div class="slide">Making you feel bad for saying no: Sulking, anger, or acting distant.</div>
@@ -75,27 +127,73 @@
         <div class="slide">🗣️ (Discuss) “If you had said no, do you think they would have been fine with it?”</div>
         <div class="slide">🗣️ (Discuss) “Would you feel comfortable stopping next time if you changed your mind?”</div>
         <div class="slide">🚩 If someone reacts badly to a ‘no,’ that’s a red flag.</div>
-        <div class="slide">Strengthening Your Autonomy & Boundaries</div>
+        <div class="slide heading-slide">Strengthening Your Autonomy & Boundaries</div>
         <div class="slide">No one is entitled to your body or time.</div>
         <div class="slide">Your feelings matter as much as theirs.</div>
         <div class="slide">You don’t owe anyone a ‘yes,’ even if they’ve done something for you.</div>
         <div class="slide">If someone truly cares about you, they’ll always respect a ‘no.’</div>
         <div class="slide">🗣️ (Discuss) “Let’s say next time you’re not feeling it. How would you say ‘no’ naturally?”</div>
         <div class="slide">🗣️ (Discuss) “If they reacted badly, what would you do?”</div>
-        <div class="slide">Handling Situations Where You Feel Unsure</div>
+        <div class="slide heading-slide">Handling Situations Where You Feel Unsure</div>
         <div class="slide">If you’re not 100% comfortable, pause and reflect.</div>
         <div class="slide">Would I still do this if I knew they were fine with me saying no?</div>
         <div class="slide">It’s okay to step away and think before making a decision.</div>
-        <div class="slide">Trusting Your Feelings & Seeking Support</div>
+        <div class="slide heading-slide">Trusting Your Feelings & Seeking Support</div>
         <div class="slide">Trust your instincts—if something feels off, there’s a reason.</div>
         <div class="slide">Healthy relationships feel safe, fun, and equal—not pressured or uncertain.</div>
         <div class="slide">🗣️ (Discuss) “No matter what happens, you can always call someone you trust—no judgment.”</div>
         <div class="slide">🗣️ (Discuss) “Even if you feel stuck, there is always a way out.”</div>
-        <div class="slide">Summary: Your choices are yours alone, and you deserve to be with people who respect them.</div>
-        <div class="buttons">
-            <button id="prevBtn" onclick="prevSlide()">Previous</button>
-            <button id="nextBtn" onclick="nextSlide()">Next</button>
-        </div>
+        <div class="slide">Your choices are yours alone, and you deserve to be with people who respect them.</div>
     </div>
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+        }
+        
+        const slides = document.querySelectorAll(".slide");
+        let currentSlide = 0;
+
+        function showSlide(index) {
+            slides.forEach(slide => slide.classList.remove("active"));
+            slides[index].classList.add("active");
+        }
+
+        function nextSlide() {
+            if (currentSlide < slides.length - 1) {
+                currentSlide++;
+                showSlide(currentSlide);
+            }
+        }
+
+        function prevSlide() {
+            if (currentSlide > 0) {
+                currentSlide--;
+                showSlide(currentSlide);
+            }
+        }
+
+        document.addEventListener("keydown", function(event) {
+            if (event.key === "ArrowRight" || event.key === " ") {
+                nextSlide();
+            } else if (event.key === "ArrowLeft") {
+                prevSlide();
+            }
+        });
+        
+        async function updatePageViews() {
+            const response = await fetch("https://api.jsonbin.io/v3/b/679f57afad19ca34f8f87afa", {
+                headers: { "X-Master-Key": "$2a$10$Cq/XNsUqX1aJK0orOYuhR.eRLW5ExEH5y2MdEGfnscBcLeorzhG1W" }
+            });
+            const data = await response.json();
+            data.record.views += 1;
+            document.getElementById("view-counter").innerText = `Views: ${data.record.views}`;
+            await fetch("https://api.jsonbin.io/v3/b/679f57afad19ca34f8f87afa", {
+                method: "PUT",
+                headers: { "Content-Type": "application/json", "X-Master-Key": "$2a$10$Cq/XNsUqX1aJK0orOYuhR.eRLW5ExEH5y2MdEGfnscBcLeorzhG1W" },
+                body: JSON.stringify(data.record)
+            });
+        }
+        updatePageViews();
+    </script>
 </body>
 </html>
