Re-adding missing content

--- a/index.html
+++ b/index.html
@@ -140,11 +140,34 @@
         <div class="slide">Wearing you down: Asking over and over until you say yes.</div>
         <div class="slide">Making you feel bad for saying no: Sulking, anger, or acting distant.</div>
         <div class="slide">Comparing you to others: “Everyone else is doing it.”</div>
+        <div class="slide">Making you feel like you’ll lose them: “If you won’t, maybe we’re not right for each other.”</div>
+        <div class="slide">🗣️ (Discuss) “If you had said no, do you think they would have been fine with it?”</div>
+        <div class="slide">🗣️ (Discuss) “Would you feel comfortable stopping next time if you changed your mind?”</div>
+        <div class="slide">🚩 If someone reacts badly to a ‘no,’ that’s a red flag.</div>
+        <div class="slide heading-slide">Strengthening Your Autonomy & Boundaries</div>
+        <div class="slide">No one is entitled to your body or time.</div>
+        <div class="slide">Your feelings matter as much as theirs.</div>
+        <div class="slide">You don’t owe anyone a ‘yes,’ even if they’ve done something for you.</div>
+        <div class="slide">If someone truly cares about you, they’ll always respect a ‘no.’</div>
+        <div class="slide">🗣️ (Discuss) “Let’s say next time you’re not feeling it. How would you say ‘no’ naturally?”</div>
+        <div class="slide">🗣️ (Discuss) “If they reacted badly, what would you do?”</div>
+        <div class="slide heading-slide">Handling Situations Where You Feel Unsure</div>
+        <div class="slide">If you’re not 100% comfortable, pause and reflect.</div>
+        <div class="slide">Would I still do this if I knew they were fine with me saying no?</div>
+        <div class="slide">It’s okay to step away and think before making a decision.</div>
+        <div class="slide heading-slide">Trusting Your Feelings & Seeking Support</div>
+        <div class="slide">Trust your instincts—if something feels off, there’s a reason.</div>
+        <div class="slide">Healthy relationships feel safe, fun, and equal—not pressured or uncertain.</div>
+        <div class="slide">🗣️ (Discuss) “No matter what happens, you can always call someone you trust—no judgment.”</div>
+        <div class="slide">🗣️ (Discuss) “Even if you feel stuck, there is always a way out.”</div>
+        <div class="slide heading-slide">Summary</div>
+        <div class="slide">Your choices are yours alone, and you deserve to be with people who respect them.</div>
+        <div class="buttons">
+            <button id="prev-btn" onclick="prevSlide()" disabled>Previous</button>
+            <button id="next-btn" onclick="nextSlide()">Next</button>
+        </div>
     </div>
-    <div class="buttons">
-        <button id="prev-btn" onclick="prevSlide()" disabled>Previous</button>
-        <button id="next-btn" onclick="nextSlide()">Next</button>
-    </div>
+
     <script>
         function toggleDarkMode() {
             document.body.classList.toggle("dark-mode");
