*slams head into the desk ad nauseum*

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="slide heading-slide">Summary</div>
         <div class="slide">Your choices are yours alone, and you deserve to be with people who respect them.</div>
         <div class="buttons">
-            <button id="prev-btn" onclick="prevSlide()" disabled>Previous</button>
+            <button id="prev-btn" onclick="prevSlide()">Previous</button>
             <button id="next-btn" onclick="nextSlide()">Next</button>
         </div>
     </div>
