--- a/index.html
+++ b/index.html
@@ -173,20 +173,20 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            applySavedDarkMode(); // Apply dark mode from previous session
             showSlide(currentSlide); // Show the first slide initially
+            applySavedDarkMode(); // Apply dark mode from previous session
         });
 
         const slides = document.querySelectorAll(".slide");
         let currentSlide = 0;
 
         function showSlide(index) {
-            slides.forEach(slide => slide.classList.remove("active"));  // Remove active class from all slides
-            slides[index].classList.add("active");  // Add active class to current slide
+            slides.forEach(slide => slide.classList.remove("active"));
+            slides[index].classList.add("active");
 
-            // Toggle visibility of prev/next buttons based on the current slide
-            document.getElementById("prev-btn").classList.toggle("hidden", index === 0);  // Hide prev button on first slide
-            document.getElementById("next-btn").classList.toggle("hidden", index === slides.length - 1);  // Hide next button on last slide
+            // Hide or show buttons based on the slide index
+            document.getElementById("prev-btn").classList.toggle("hidden", index === 0);
+            document.getElementById("next-btn").classList.toggle("hidden", index === slides.length - 1);
         }
 
         function nextSlide() {
